MMA-7633 Fjern ubrukt kode, og generell opprydding